115 dessarrollar UI select alquilar herramientas (#117)
* Creado contenedor

* Añadido contenedor al program.cs

* Empezamos los razor

* Implementada ventana de select herramienta para alquilar

* Implementado filtros del select

* Corregido nombre GetFabricante
