# src/AppForSEII2526.Web/OpenAPIs/swagger.json
@@ -14,6 +14,54 @@
     "version": "v1"
   },
   "paths": {
+    "/GetFabricantes": {
+      "get": {
+        "tags": [
+          "Frabricantes"
+        ],
+        "operationId": "GetFabricantes",
+        "parameters": [
+          {
+            "name": "nombreFabricantes",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Alquiler/GetAlquiler": {
       "get": {
         "tags": [
@@ -312,6 +360,54 @@
         }
       }
     },
+    "/api/Fabricante/GetFabricantes": {
+      "get": {
+        "tags": [
+          "Fabricante"
+        ],
+        "operationId": "GetFabricantes",
+        "parameters": [
+          {
+            "name": "nombreFabricantes",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HerramienParaAlquilarDTO"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HerramienParaAlquilarDTO"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HerramienParaAlquilarDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Herramienta/GetHerramientasForRenting": {
       "get": {
         "tags": [
@@ -387,6 +483,13 @@
             "schema": {
               "type": "number",
               "format": "float"
+            }
+          },
+          {
+            "name": "nombreHerramienta",
+            "in": "query",
+            "schema": {
+              "type": "string"
             }
           }
         ],
@@ -1012,14 +1115,10 @@
         "type": "object",
         "properties": {
           "material": {
-            "maxLength": 50,
-            "minLength": 10,
             "type": "string",
             "nullable": true
           },
           "nombre": {
-            "maxLength": 50,
-            "minLength": 10,
             "type": "string",
             "nullable": true
           },
@@ -1030,8 +1129,6 @@
             "format": "float"
           },
           "descripcion": {
-            "maxLength": 100,
-            "minLength": 10,
             "type": "string",
             "nullable": true
           },
